[workspace]
members = [
	"tuplez-macros",
]
resolver = "2"

[workspace.package]
authors = [ "Nichts Hsu <NichtsVonChaos@gmail.com>" ]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
documentation = "https://docs.rs/tuplez"
repository = "https://github.com/NichtsHsu/tuplez"
keywords = [ "tuple" ]

[package]
name = "tuplez"
version = "0.2.1"
description = "Tuples represented in recursive form"
authors.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories = [ "data-structures" ]

[features]
default = [ "unwrap" ]
any_array = []
unwrap = []

[dependencies]
tuplez-macros = { path = "tuplez-macros", version = "0.1.3" }
paste = "1.0"
