[workspace]
members = ["tuplez-macros"]
resolver = "2"

[workspace.package]
authors = ["Nichts Hsu <NichtsVonChaos@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
documentation = "https://docs.rs/tuplez"
repository = "https://github.com/NichtsHsu/tuplez"
keywords = ["tuple"]

[package]
name = "tuplez"
version = "0.14.9"
description = "Tuples represented in recursive form"
authors.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories = ["data-structures"]

[features]
default = ["unwrap"]
full = ["serde", "unwrap", "uninit"]
full-nightly = ["full", "any_array"]
any_array = []
unwrap = []
uninit = []

[dependencies]
paste = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
tuplez-macros = { path = "tuplez-macros", version = "0.6.0" }

[package.metadata.docs.rs]
features = ["full"]
