[workspace]
members = ["tuplez-macros"]
resolver = "2"

[workspace.package]
authors = ["Nichts Hsu <NichtsVonChaos@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
documentation = "https://docs.rs/tuplez"
repository = "https://github.com/NichtsHsu/tuplez"
keywords = ["tuple", "no-std"]

[package]
name = "tuplez"
version = "0.14.14"
description = "Tuples represented in recursive form"
authors.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories = ["data-structures", "no-std", "no-std::no-alloc"]

[features]
default = ["std", "unwrap"]
full-no-std = ["serde", "uninit", "unwrap"]
full = ["std", "full-no-std"]
full-nightly = ["full", "any_array"]
any_array = []
std = ["serde?/std"]
alloc = ["serde?/alloc"]
uninit = []
unwrap = []

[dependencies]
tuplez-macros = { path = "tuplez-macros", version = "0.7.0" }

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]
optional = true

[package.metadata.docs.rs]
features = ["full"]
